analysis pipeline major bug fixes

--- a/analysis/cleaned_anymaze_like_output_analysis.ipynb
+++ b/analysis/cleaned_anymaze_like_output_analysis.ipynb
@@ -2,14 +2,96 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    ""
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from pandas.api.types import CategoricalDtype\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import tqdm"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "matplotlib.rcParams['pdf.fonttype'] = 42\n",
+    "sns.set()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 145/145 [03:13<00:00,  1.34s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "h5dir = r'J:\\Alja Podgornik\\Multimaze arena\\Cohort 1_June 2020\\all_outputs_main\\anymaze_outputs\\cleaned_h5s'\n",
+    "df_accu = pd.DataFrame()\n",
+    "for h5 in tqdm.tqdm(os.listdir(h5dir)):\n",
+    "    data = pd.read_hdf(os.path.join(h5dir, h5))\n",
+    "    df_accu = df_accu.append(data)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['interspace' 'social' 'marble' 'nest' 'drinking']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_accu['zone'].unique())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
