Updated the code to correct for the flipped Y coordinate

--- a/unused_code/import_data_from_sonia_paxiao.ipynb
+++ b/unused_code/import_data_from_sonia_paxiao.ipynb
@@ -19,7 +19,30 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "deprecated pixel format used, make sure you did set range correctly\n",
+      "deprecated pixel format used, make sure you did set range correctly\n",
+      " (repeated 7 more times)\n",
+      "deprecated pixel format used, make sure you did set range correctly\n",
+      "deprecated pixel format used, make sure you did set range correctly\n",
+      " (repeated 7 more times)\n",
+      "deprecated pixel format used, make sure you did set range correctly\n",
+      "deprecated pixel format used, make sure you did set range correctly\n",
+      " (repeated 7 more times)\n",
+      "deprecated pixel format used, make sure you did set range correctly\n",
+      "deprecated pixel format used, make sure you did set range correctly\n",
+      " (repeated 7 more times)\n",
+      "deprecated pixel format used, make sure you did set range correctly\n",
+      "deprecated pixel format used, make sure you did set range correctly\n",
+      " (repeated 7 more times)\n",
+      "deprecated pixel format used, make sure you did set range correctly\n"
+     ]
+    }
+   ],
    "source": [
     "datafolder = r\"C:\\Users\\serce\\Desktop\\string_pullingxDLC_sonia_paxiao\"\n",
     "labeled_data = os.path.join(datafolder, 'labeled-data')\n",
@@ -30,6 +53,8 @@
     "\n",
     "# for avi in avis.copy():\n",
     "for avi in avis:\n",
+    "    pims_video = pims.Video(avi)\n",
+    "    height = pims_video.frame_shape[0]\n",
     "    folder_name = os.path.split(avi)[-1][:-4]\n",
     "    csv = folder_name+'.csv'\n",
     "    if csv not in os.listdir(datafolder):\n",
@@ -42,7 +67,10 @@
     "            print('Check', csv, 'column names!!!')\n",
     "        else:\n",
     "            for i, col in enumerate(df.columns):\n",
-    "                df.loc[:, col] = data.iloc[:, i].values\n",
+    "                if col[2] == 'y':\n",
+    "                    df.loc[:, col] = height - data.iloc[:, i].values\n",
+    "                else:\n",
+    "                    df.loc[:, col] = data.iloc[:, i].values\n",
     "            df = df.dropna(how='all')\n",
     "            videofolder = os.path.join(labeled_data, folder_name)\n",
     "            if not os.path.exists(videofolder):\n",
@@ -119,53 +147,61 @@
    "execution_count": 5,
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "deprecated pixel format used, make sure you did set range correctly\n",
+      " (repeated 2 more times)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=32)]: Using backend LokyBackend with 32 concurrent workers.\n",
-      "[Parallel(n_jobs=32)]: Done   1 tasks      | elapsed:  1.0min\n",
-      "[Parallel(n_jobs=32)]: Done   2 out of  43 | elapsed:  2.6min remaining: 52.4min\n",
-      "[Parallel(n_jobs=32)]: Done   3 out of  43 | elapsed:  2.8min remaining: 36.9min\n",
-      "[Parallel(n_jobs=32)]: Done   4 out of  43 | elapsed:  3.3min remaining: 32.3min\n",
-      "[Parallel(n_jobs=32)]: Done   5 out of  43 | elapsed:  4.3min remaining: 32.3min\n",
-      "[Parallel(n_jobs=32)]: Done   6 out of  43 | elapsed:  4.4min remaining: 27.3min\n",
+      "[Parallel(n_jobs=32)]: Done   1 tasks      | elapsed:  1.1min\n",
+      "[Parallel(n_jobs=32)]: Done   2 out of  43 | elapsed:  2.6min remaining: 52.8min\n",
+      "[Parallel(n_jobs=32)]: Done   3 out of  43 | elapsed:  2.8min remaining: 37.7min\n",
+      "[Parallel(n_jobs=32)]: Done   4 out of  43 | elapsed:  3.4min remaining: 32.8min\n",
+      "[Parallel(n_jobs=32)]: Done   5 out of  43 | elapsed:  4.3min remaining: 32.6min\n",
+      "[Parallel(n_jobs=32)]: Done   6 out of  43 | elapsed:  4.5min remaining: 27.5min\n",
       "[Parallel(n_jobs=32)]: Done   7 out of  43 | elapsed:  4.8min remaining: 24.5min\n",
-      "[Parallel(n_jobs=32)]: Done   8 out of  43 | elapsed:  4.8min remaining: 20.9min\n",
-      "[Parallel(n_jobs=32)]: Done   9 out of  43 | elapsed:  4.8min remaining: 18.1min\n",
+      "[Parallel(n_jobs=32)]: Done   8 out of  43 | elapsed:  4.8min remaining: 21.0min\n",
+      "[Parallel(n_jobs=32)]: Done   9 out of  43 | elapsed:  4.8min remaining: 18.2min\n",
       "[Parallel(n_jobs=32)]: Done  10 out of  43 | elapsed:  4.9min remaining: 16.0min\n",
-      "[Parallel(n_jobs=32)]: Done  11 out of  43 | elapsed:  5.1min remaining: 14.8min\n",
-      "[Parallel(n_jobs=32)]: Done  12 out of  43 | elapsed:  5.2min remaining: 13.3min\n",
-      "[Parallel(n_jobs=32)]: Done  13 out of  43 | elapsed:  5.3min remaining: 12.2min\n",
-      "[Parallel(n_jobs=32)]: Done  14 out of  43 | elapsed:  5.5min remaining: 11.4min\n",
-      "[Parallel(n_jobs=32)]: Done  15 out of  43 | elapsed:  5.8min remaining: 10.8min\n",
-      "[Parallel(n_jobs=32)]: Done  16 out of  43 | elapsed:  6.0min remaining: 10.1min\n",
-      "[Parallel(n_jobs=32)]: Done  17 out of  43 | elapsed:  6.0min remaining:  9.2min\n",
-      "[Parallel(n_jobs=32)]: Done  18 out of  43 | elapsed:  6.2min remaining:  8.5min\n",
-      "[Parallel(n_jobs=32)]: Done  19 out of  43 | elapsed:  6.3min remaining:  8.0min\n",
-      "[Parallel(n_jobs=32)]: Done  20 out of  43 | elapsed:  6.4min remaining:  7.4min\n",
-      "[Parallel(n_jobs=32)]: Done  21 out of  43 | elapsed:  6.5min remaining:  6.8min\n",
-      "[Parallel(n_jobs=32)]: Done  22 out of  43 | elapsed:  6.6min remaining:  6.3min\n",
-      "[Parallel(n_jobs=32)]: Done  23 out of  43 | elapsed:  6.7min remaining:  5.8min\n",
-      "[Parallel(n_jobs=32)]: Done  24 out of  43 | elapsed:  7.1min remaining:  5.6min\n",
-      "[Parallel(n_jobs=32)]: Done  25 out of  43 | elapsed:  7.2min remaining:  5.2min\n",
+      "[Parallel(n_jobs=32)]: Done  11 out of  43 | elapsed:  5.1min remaining: 15.0min\n",
+      "[Parallel(n_jobs=32)]: Done  12 out of  43 | elapsed:  5.2min remaining: 13.5min\n",
+      "[Parallel(n_jobs=32)]: Done  13 out of  43 | elapsed:  5.4min remaining: 12.4min\n",
+      "[Parallel(n_jobs=32)]: Done  14 out of  43 | elapsed:  5.6min remaining: 11.5min\n",
+      "[Parallel(n_jobs=32)]: Done  15 out of  43 | elapsed:  5.9min remaining: 11.1min\n",
+      "[Parallel(n_jobs=32)]: Done  16 out of  43 | elapsed:  6.0min remaining: 10.2min\n",
+      "[Parallel(n_jobs=32)]: Done  17 out of  43 | elapsed:  6.1min remaining:  9.3min\n",
+      "[Parallel(n_jobs=32)]: Done  18 out of  43 | elapsed:  6.2min remaining:  8.6min\n",
+      "[Parallel(n_jobs=32)]: Done  19 out of  43 | elapsed:  6.4min remaining:  8.1min\n",
+      "[Parallel(n_jobs=32)]: Done  20 out of  43 | elapsed:  6.5min remaining:  7.5min\n",
+      "[Parallel(n_jobs=32)]: Done  21 out of  43 | elapsed:  6.6min remaining:  6.9min\n",
+      "[Parallel(n_jobs=32)]: Done  22 out of  43 | elapsed:  6.7min remaining:  6.4min\n",
+      "[Parallel(n_jobs=32)]: Done  23 out of  43 | elapsed:  6.7min remaining:  5.9min\n",
+      "[Parallel(n_jobs=32)]: Done  24 out of  43 | elapsed:  7.2min remaining:  5.7min\n",
+      "[Parallel(n_jobs=32)]: Done  25 out of  43 | elapsed:  7.3min remaining:  5.2min\n",
       "[Parallel(n_jobs=32)]: Done  26 out of  43 | elapsed:  7.4min remaining:  4.8min\n",
-      "[Parallel(n_jobs=32)]: Done  27 out of  43 | elapsed:  7.4min remaining:  4.4min\n",
-      "[Parallel(n_jobs=32)]: Done  28 out of  43 | elapsed:  8.4min remaining:  4.5min\n",
-      "[Parallel(n_jobs=32)]: Done  29 out of  43 | elapsed:  8.5min remaining:  4.1min\n",
-      "[Parallel(n_jobs=32)]: Done  30 out of  43 | elapsed:  8.6min remaining:  3.7min\n",
-      "[Parallel(n_jobs=32)]: Done  31 out of  43 | elapsed:  8.8min remaining:  3.4min\n",
-      "[Parallel(n_jobs=32)]: Done  32 out of  43 | elapsed:  9.0min remaining:  3.1min\n",
+      "[Parallel(n_jobs=32)]: Done  27 out of  43 | elapsed:  7.5min remaining:  4.4min\n",
+      "[Parallel(n_jobs=32)]: Done  28 out of  43 | elapsed:  8.6min remaining:  4.6min\n",
+      "[Parallel(n_jobs=32)]: Done  29 out of  43 | elapsed:  8.6min remaining:  4.2min\n",
+      "[Parallel(n_jobs=32)]: Done  30 out of  43 | elapsed:  8.7min remaining:  3.8min\n",
+      "[Parallel(n_jobs=32)]: Done  31 out of  43 | elapsed:  8.9min remaining:  3.4min\n",
+      "[Parallel(n_jobs=32)]: Done  32 out of  43 | elapsed:  9.1min remaining:  3.1min\n",
       "[Parallel(n_jobs=32)]: Done  33 out of  43 | elapsed:  9.3min remaining:  2.8min\n",
-      "[Parallel(n_jobs=32)]: Done  34 out of  43 | elapsed:  9.3min remaining:  2.5min\n",
-      "[Parallel(n_jobs=32)]: Done  35 out of  43 | elapsed:  9.6min remaining:  2.2min\n",
-      "[Parallel(n_jobs=32)]: Done  36 out of  43 | elapsed:  9.7min remaining:  1.9min\n",
-      "[Parallel(n_jobs=32)]: Done  37 out of  43 | elapsed:  9.8min remaining:  1.6min\n",
+      "[Parallel(n_jobs=32)]: Done  34 out of  43 | elapsed:  9.4min remaining:  2.5min\n",
+      "[Parallel(n_jobs=32)]: Done  35 out of  43 | elapsed:  9.7min remaining:  2.2min\n",
+      "[Parallel(n_jobs=32)]: Done  36 out of  43 | elapsed:  9.8min remaining:  1.9min\n",
+      "[Parallel(n_jobs=32)]: Done  37 out of  43 | elapsed:  9.9min remaining:  1.6min\n",
       "[Parallel(n_jobs=32)]: Done  38 out of  43 | elapsed: 10.1min remaining:  1.3min\n",
-      "[Parallel(n_jobs=32)]: Done  39 out of  43 | elapsed: 10.1min remaining:  1.0min\n",
-      "[Parallel(n_jobs=32)]: Done  40 out of  43 | elapsed: 12.7min remaining:   57.0s\n",
-      "[Parallel(n_jobs=32)]: Done  41 out of  43 | elapsed: 12.9min remaining:   37.6s\n",
-      "[Parallel(n_jobs=32)]: Done  43 out of  43 | elapsed: 17.6min remaining:    0.0s\n",
-      "[Parallel(n_jobs=32)]: Done  43 out of  43 | elapsed: 17.6min finished\n",
+      "[Parallel(n_jobs=32)]: Done  39 out of  43 | elapsed: 10.2min remaining:  1.0min\n",
+      "[Parallel(n_jobs=32)]: Done  40 out of  43 | elapsed: 12.8min remaining:   57.3s\n",
+      "[Parallel(n_jobs=32)]: Done  41 out of  43 | elapsed: 13.0min remaining:   37.9s\n",
+      "[Parallel(n_jobs=32)]: Done  43 out of  43 | elapsed: 17.7min remaining:    0.0s\n",
+      "[Parallel(n_jobs=32)]: Done  43 out of  43 | elapsed: 17.7min finished\n",
       "All done!\n"
      ]
     }
@@ -177,7 +213,7 @@
     "inputvideotype = \".avi\"\n",
     "\n",
     "generate_videos(labeled_data_folder, videos_folder, csvname, inputvideotype, outputvideotype='.mp4', n_jobs=32)\n",
-    "print('All done!')"
+    "print('All done!')\n"
    ],
    "metadata": {
     "collapsed": false,
