--- a/analysis/cleaned_outputs_combine.ipynb
+++ b/analysis/cleaned_outputs_combine.ipynb
@@ -2,35 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\serce\\Anaconda3\\envs\\behaviour-switching\\lib\\site-packages\\tqdm\\std.py:668: FutureWarning: The Panel class is removed from pandas. Accessing it from the top-level namespace will also be removed in the next version\n",
-      "  from pandas import Panel\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
-    "# import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# import seaborn as sb\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "matplotlib.rcParams['pdf.fonttype'] = 42\n",
-    "# sb.set()\n",
-    "tqdm.pandas()"
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -40,23 +24,7 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 143/143 [00:17<00:00,  8.00it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ctrl5_day4_clean.csv excluded!\n",
-      "hr9_day2_clean.csv excluded!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "csv_folder = r'J:\\Alja Podgornik\\Multimaze arena\\Cohort 1_June 2020\\all_videos\\processed\\withROIs\\cleaned'\n",
     "\n",
@@ -74,14 +42,12 @@
     "              'time':'float', 'period': period_dtype, 'opto':'bool', 'cum_dist_cm':'float', 'bout_duration':'float',\n",
     "              'bout_velocity':'float'}\n",
     "\n",
-    "    csv_folder = r'J:\\Alja Podgornik\\Multimaze arena\\Cohort 1_June 2020\\all_videos\\processed\\withROIs\\cleaned'\n",
-    "\n",
     "    exclude = ['ctrl5_day4_clean.csv', 'ctrl2_day1_clean.csv', 'chr9_day2_clean.csv',\n",
     "               'hr9_day2_clean.csv']\n",
     "    data = {}\n",
     "    for file in tqdm(os.listdir(csv_folder)):\n",
     "        if file not in exclude:\n",
-    "            if file.endswith('clean.csv'):\n",
+    "            if file.endswith('_clean.csv'):\n",
     "                data[file] = pd.read_csv(os.path.join(csv_folder, file), index_col=0, dtype=dtypes)\n",
     "                if len(data[file]) < 100000:\n",
     "                    del data[file]\n",
@@ -91,19 +57,6 @@
     "    df = pd.concat(data.values())\n",
     "    df.to_hdf(os.path.join(csv_folder, 'combined.h5'), key='combined', format='table')\n",
     "    df.to_csv(os.path.join(csv_folder, 'combined.csv'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# sb.catplot(x='bout_zone', y='bout_duration', hue='group', kind='box', data=df, height=12, aspect=0.7, col='period')"
    ]
   }
  ],
