--- a/analysis/cleaned_outputs_combine.ipynb
+++ b/analysis/cleaned_outputs_combine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -24,7 +24,23 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 143/143 [00:22<00:00,  6.33it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ctrl5_day4_clean.csv excluded!\n",
+      "hr9_day2_clean.csv excluded!\n"
+     ]
+    }
+   ],
    "source": [
     "csv_folder = r'J:\\Alja Podgornik\\Multimaze arena\\Cohort 1_June 2020\\all_videos\\processed\\withROIs\\cleaned'\n",
     "\n",
