PyCharm auto-update

--- a/analysis/cleaned_outputs_combine.ipynb
+++ b/analysis/cleaned_outputs_combine.ipynb
@@ -29,7 +29,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 143/143 [00:22<00:00,  6.33it/s]\n"
+      "100%|██████████| 144/144 [00:27<00:00,  5.21it/s]\n"
      ]
     },
     {
@@ -56,7 +56,7 @@
     "\n",
     "    dtypes = {'animal':'category', 'group':group_dtype, 'day':'category', 'zone':zone_dtype, 'bout_zone':zone_dtype,\n",
     "              'time':'float', 'period': period_dtype, 'opto':'bool', 'cum_dist_cm':'float', 'bout_duration':'float',\n",
-    "              'bout_velocity':'float'}\n",
+    "              'bout_velocity':'float', 'jitter':'float'}\n",
     "\n",
     "    exclude = ['ctrl5_day4_clean.csv', 'ctrl2_day1_clean.csv', 'chr9_day2_clean.csv',\n",
     "               'hr9_day2_clean.csv']\n",
